# elby

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  Vagrantfile  build.zig
include/: elby.h
lib/api/: api.zig  encoding.zig  error.zig  module.zig  pipeline.zig  result.zig  types.zig  utils.zig
lib/api/codegen/: context.zig  target.zig
lib/api/codegen/targets/c99/: target.zig  template.c.in
lib/api/compiler/: ast.zig  combinators.zig  deviation.zig  grammar.zig  index.zig  parser.zig  scanner.zig  syntax_error.zig  token.zig  tokenizer.zig  visitor.zig
lib/api/compiler/test/: runner.zig  test_expression.zig
lib/api/irgen/: compiler.zig  function.zig  index.zig  instruction.zig  module.zig  scheme.zig  slot.zig
lib/api/irgen/interpreter/: interpreter.zig
lib/api/irgen/tests/: index.zig  runner.zig  test_assignments.zig  test_bools.zig  test_function_call.zig  test_while_loop.zig
lib/api/parser/: expect.zig  parser.zig  types.zig
lib/api/parsing/: ast.zig  combinators.zig  grammar.zig  index.zig  parser.zig  parser2.zig  scanner.zig  syntax_error.zig  token.zig  tokenizer.zig  visitor.zig
lib/api/parsing/tests/: index.zig  runner.zig  test_expression.zig  test_functions.zig
lib/api/testing/: utils.zig
lib/api/tokenizer/: scanner.zig  token.zig  tokenizer.zig
lib/argscan/: argscan.zig
lib/parser/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
lib/parser/bindings/node/: binding.cc  index.js
lib/parser/bindings/rust/: lib.rs
lib/parser/src/: grammar.json  node-types.json  parser.c
lib/parser/test/corpus/: statements.txt
src/: CMakeLists.txt  main.zig
src/elby-check/: main.zig
src/elby-compile/: main.zig
src/elby-dump-ir/: main.zig
src/parser/: CMakeLists.txt
src/parser/include/elby/parser/: lex.h  parser.h  token.h
src/parser/src/: lex.c  parser.c  token.c
src/parser/test/: main.c
src/runtime/: CMakeLists.txt
src/runtime/include/elby/runtime/: runtime.h
src/runtime/include/elby/runtime/private/: hashtable.h  runtime.h  value.h  vm.h
src/runtime/src/: hashtable.c  runtime.c  value.c  vm.c
src/runtime/test/: main.c
src/utils/: CMakeLists.txt
src/utils/include/elby/utils/: tstree.h  vector.h
src/utils/src/: tstree.c  vector.c
src/utils/test/: main.c
test/c99/: Dockerfile  Gemfile  Makefile
test/c99/001-empty/: main.lb
test/c99/tests/001-empty/: test.rb
test/c99/tests/002-exit-value/: main.lb  test.rb
test/c99/tests/003-simple-if/: main.lb  test.rb
test/c99/tests/004-simple-function-call/: main.lb  test.rb
test/c99/tests/005-bool-literals/: main.lb  test.rb
test/c99/tests/006-empty-while/: main.lb  test.rb
test/c99/tests/007-mutable-var/: main.lb  test.rb
test/c99/tests/008-counting-loop/: main.lb  test.rb
test/c99/tests/009-block-expr/: main.lb  test.rb
test/c99/utils/: test-builder.rb
